// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / ProgressBar Custom Colors 1`] = `
.c0 {
  padding-left: 40px;
  padding-right: 40px;
  background-color: transparent;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  color: #00C8F5;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #00C8F5;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #336BFF;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c11 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #336BFF;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  background-color: #FF2B83;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 32px;
  width: 32px;
  border-radius: 32px;
}

.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  background-color: #D2F500;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 32px;
  width: 32px;
  border-radius: 32px;
}

.c13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  background-color: #00F0E1;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 32px;
  width: 32px;
  border-radius: 32px;
}

.c2 {
  width: 100%;
}

.c4 {
  position: relative;
}

.c8 {
  display: none;
  text-align: center;
  white-space: nowrap;
}

.c9 {
  width: 100%;
  height: 2px;
  background-color: #D2F500;
}

.c12 {
  width: 100%;
  height: 2px;
  background-color: #00F0E1;
}

@media (min-width:976px) {
  .c2 {
    padding-bottom: 32px;
  }
}

@media (min-width:976px) {
  .c8 {
    display: block;
    position: absolute;
    top: 40px;
  }
}

<div
  className="c0"
>
  <div
    className="c1 c2"
    hasLabels={true}
    title="progress bar"
  >
    <span
      className="c3 c4"
      title="Done - step done"
    >
      <span
        aria-hidden={true}
        className="c5"
      >
        <svg
          aria-hidden="true"
          className="c6"
          focusable="false"
          height={16}
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          width={16}
        >
          <path
            clipRule="evenodd"
            d="M15.85 3.657l-9.9 9.9L.293 7.898l1.414-1.414 4.243 4.243 8.485-8.485 1.414 1.414z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </span>
      <span
        aria-hidden={true}
        className="c7 c8"
      >
        Done
      </span>
    </span>
    <div
      className="c9"
    />
    <span
      className="c10 c4"
      title="Active - active step"
    >
      <span
        aria-hidden={true}
        className="c5"
      >
        2
      </span>
      <span
        aria-hidden={true}
        className="c11 c8"
      >
        Active
      </span>
    </span>
    <div
      className="c12"
    />
    <span
      className="c13 c4"
      title="Next - step not done"
    >
      <span
        aria-hidden={true}
        className="c5"
      >
        3
      </span>
      <span
        aria-hidden={true}
        className="c7 c8"
      >
        Next
      </span>
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules / ProgressBar Custom Titles 1`] = `
.c0 {
  padding-left: 40px;
  padding-right: 40px;
  background-color: transparent;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  color: #FFFFFF;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c11 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  background-color: #00D200;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 32px;
  width: 32px;
  border-radius: 32px;
}

.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  background-color: #0046FF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 32px;
  width: 32px;
  border-radius: 32px;
}

.c13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  background-color: #BCBCB6;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 32px;
  width: 32px;
  border-radius: 32px;
}

.c2 {
  width: 100%;
}

.c4 {
  position: relative;
}

.c8 {
  display: none;
  text-align: center;
  white-space: nowrap;
}

.c9 {
  width: 100%;
  height: 2px;
  background-color: #0046FF;
}

.c12 {
  width: 100%;
  height: 2px;
  background-color: #BCBCB6;
}

@media (min-width:976px) {
  .c2 {
    padding-bottom: 32px;
  }
}

@media (min-width:976px) {
  .c8 {
    display: block;
    position: absolute;
    top: 40px;
  }
}

<div
  className="c0"
>
  <div
    className="c1 c2"
    hasLabels={true}
    title="Donald's Nephews"
  >
    <span
      className="c3 c4"
      title="Huey - The red one"
    >
      <span
        aria-hidden={true}
        className="c5"
      >
        <svg
          aria-hidden="true"
          className="c6"
          focusable="false"
          height={16}
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          width={16}
        >
          <path
            clipRule="evenodd"
            d="M15.85 3.657l-9.9 9.9L.293 7.898l1.414-1.414 4.243 4.243 8.485-8.485 1.414 1.414z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </span>
      <span
        aria-hidden={true}
        className="c7 c8"
      >
        Huey
      </span>
    </span>
    <div
      className="c9"
    />
    <span
      className="c10 c4"
      title="Dewey - The blue one"
    >
      <span
        aria-hidden={true}
        className="c5"
      >
        2
      </span>
      <span
        aria-hidden={true}
        className="c11 c8"
      >
        Dewey
      </span>
    </span>
    <div
      className="c12"
    />
    <span
      className="c13 c4"
      title="Louie - The green one"
    >
      <span
        aria-hidden={true}
        className="c5"
      >
        3
      </span>
      <span
        aria-hidden={true}
        className="c7 c8"
      >
        Louie
      </span>
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules / ProgressBar Default 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  color: #FFFFFF;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  background-color: #00D200;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 32px;
  width: 32px;
  border-radius: 32px;
}

.c9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  background-color: #0046FF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 32px;
  width: 32px;
  border-radius: 32px;
}

.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  background-color: #BCBCB6;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 32px;
  width: 32px;
  border-radius: 32px;
}

.c1 {
  width: 100%;
}

.c3 {
  position: relative;
}

.c7 {
  display: none;
  text-align: center;
  white-space: nowrap;
}

.c8 {
  width: 100%;
  height: 2px;
  background-color: #0046FF;
}

.c11 {
  width: 100%;
  height: 2px;
  background-color: #BCBCB6;
}

@media (min-width:976px) {
  .c1 {
    padding-bottom: 0px;
  }
}

@media (min-width:976px) {
  .c7 {
    display: block;
    position: absolute;
    top: 40px;
  }
}

<div
  className="c0 c1"
  hasLabels={false}
  title="progress bar"
>
  <span
    className="c2 c3"
    title="undefined - step done"
  >
    <span
      aria-hidden={true}
      className="c4"
    >
      <svg
        aria-hidden="true"
        className="c5"
        focusable="false"
        height={16}
        preserveAspectRatio="xMidYMid meet"
        role="presentation"
        width={16}
      >
        <path
          clipRule="evenodd"
          d="M15.85 3.657l-9.9 9.9L.293 7.898l1.414-1.414 4.243 4.243 8.485-8.485 1.414 1.414z"
          fill="currentColor"
          fillRule="evenodd"
        />
      </svg>
    </span>
    <span
      aria-hidden={true}
      className="c6 c7"
    />
  </span>
  <div
    className="c8"
  />
  <span
    className="c9 c3"
    title="undefined - active step"
  >
    <span
      aria-hidden={true}
      className="c4"
    >
      2
    </span>
    <span
      aria-hidden={true}
      className="c10 c7"
    />
  </span>
  <div
    className="c11"
  />
  <span
    className="c12 c3"
    title="undefined - step not done"
  >
    <span
      aria-hidden={true}
      className="c4"
    >
      3
    </span>
    <span
      aria-hidden={true}
      className="c6 c7"
    />
  </span>
</div>
`;

exports[`Storyshots Molecules / ProgressBar Failure Step 1`] = `
.c0 {
  padding-left: 40px;
  padding-right: 40px;
  background-color: transparent;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 > *:not(:first-child) {
  padding-top: 8px;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  color: #FFFFFF;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c13 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  background-color: #00D200;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 32px;
  width: 32px;
  border-radius: 32px;
}

.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  background-color: #FF1900;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 32px;
  width: 32px;
  border-radius: 32px;
}

.c15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  background-color: #BCBCB6;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 32px;
  width: 32px;
  border-radius: 32px;
}

.c3 {
  width: 100%;
}

.c5 {
  position: relative;
}

.c9 {
  display: none;
  text-align: center;
  white-space: nowrap;
}

.c10 {
  width: 100%;
  height: 2px;
  background-color: #00D200;
}

.c11 {
  width: 100%;
  height: 2px;
  background-color: #FF1900;
}

.c14 {
  width: 100%;
  height: 2px;
  background-color: #BCBCB6;
}

@media (min-width:976px) {
  .c3 {
    padding-bottom: 32px;
  }
}

@media (min-width:976px) {
  .c9 {
    display: block;
    position: absolute;
    top: 40px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2 c3"
      hasLabels={true}
      title="progress bar"
    >
      <span
        className="c4 c5"
        title="One - step done"
      >
        <span
          aria-hidden={true}
          className="c6"
        >
          <svg
            aria-hidden="true"
            className="c7"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={16}
          >
            <path
              clipRule="evenodd"
              d="M15.85 3.657l-9.9 9.9L.293 7.898l1.414-1.414 4.243 4.243 8.485-8.485 1.414 1.414z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
        <span
          aria-hidden={true}
          className="c8 c9"
        >
          One
        </span>
      </span>
      <div
        className="c10"
      />
      <span
        className="c4 c5"
        title="Two - step done"
      >
        <span
          aria-hidden={true}
          className="c6"
        >
          <svg
            aria-hidden="true"
            className="c7"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={16}
          >
            <path
              clipRule="evenodd"
              d="M15.85 3.657l-9.9 9.9L.293 7.898l1.414-1.414 4.243 4.243 8.485-8.485 1.414 1.414z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
        <span
          aria-hidden={true}
          className="c8 c9"
        >
          Two
        </span>
      </span>
      <div
        className="c11"
      />
      <span
        className="c12 c5"
        title="Failed step - active step"
      >
        <span
          aria-hidden={true}
          className="c6"
        >
          <svg
            aria-hidden="true"
            className="c7"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={16}
          >
            <path
              d="M9.414 8l5.793-5.793L13.793.793 8 6.586 2.207.793.793 2.207 6.586 8 .793 13.793l1.414 1.414L8 9.414l5.793 5.793 1.414-1.414L9.414 8z"
              fill="currentColor"
            />
          </svg>
        </span>
        <span
          aria-hidden={true}
          className="c13 c9"
        >
          Failed step
        </span>
      </span>
      <div
        className="c14"
      />
      <span
        className="c15 c5"
        title="Four - failure step"
      >
        <span
          aria-hidden={true}
          className="c6"
        >
          4
        </span>
        <span
          aria-hidden={true}
          className="c8 c9"
        >
          Four
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / ProgressBar Lots Of Steps 1`] = `
.c0 {
  padding-left: 40px;
  padding-right: 40px;
  background-color: transparent;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  color: #FFFFFF;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c12 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  background-color: #00D200;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 32px;
  width: 32px;
  border-radius: 32px;
}

.c11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  background-color: #0046FF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 32px;
  width: 32px;
  border-radius: 32px;
}

.c14 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  background-color: #BCBCB6;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 32px;
  width: 32px;
  border-radius: 32px;
}

.c2 {
  width: 100%;
}

.c4 {
  position: relative;
}

.c8 {
  display: none;
  text-align: center;
  white-space: nowrap;
}

.c9 {
  width: 100%;
  height: 2px;
  background-color: #00D200;
}

.c10 {
  width: 100%;
  height: 2px;
  background-color: #0046FF;
}

.c13 {
  width: 100%;
  height: 2px;
  background-color: #BCBCB6;
}

@media (min-width:976px) {
  .c2 {
    padding-bottom: 32px;
  }
}

@media (min-width:976px) {
  .c8 {
    display: block;
    position: absolute;
    top: 40px;
  }
}

<div
  className="c0"
>
  <div
    className="c1 c2"
    hasLabels={true}
    title="progress bar"
  >
    <span
      className="c3 c4"
      title="Lorem - step done"
    >
      <span
        aria-hidden={true}
        className="c5"
      >
        <svg
          aria-hidden="true"
          className="c6"
          focusable="false"
          height={16}
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          width={16}
        >
          <path
            clipRule="evenodd"
            d="M15.85 3.657l-9.9 9.9L.293 7.898l1.414-1.414 4.243 4.243 8.485-8.485 1.414 1.414z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </span>
      <span
        aria-hidden={true}
        className="c7 c8"
      >
        Lorem
      </span>
    </span>
    <div
      className="c9"
    />
    <span
      className="c3 c4"
      title="Ipsum - step done"
    >
      <span
        aria-hidden={true}
        className="c5"
      >
        <svg
          aria-hidden="true"
          className="c6"
          focusable="false"
          height={16}
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          width={16}
        >
          <path
            clipRule="evenodd"
            d="M15.85 3.657l-9.9 9.9L.293 7.898l1.414-1.414 4.243 4.243 8.485-8.485 1.414 1.414z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </span>
      <span
        aria-hidden={true}
        className="c7 c8"
      >
        Ipsum
      </span>
    </span>
    <div
      className="c9"
    />
    <span
      className="c3 c4"
      title="Dolor - step done"
    >
      <span
        aria-hidden={true}
        className="c5"
      >
        <svg
          aria-hidden="true"
          className="c6"
          focusable="false"
          height={16}
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          width={16}
        >
          <path
            clipRule="evenodd"
            d="M15.85 3.657l-9.9 9.9L.293 7.898l1.414-1.414 4.243 4.243 8.485-8.485 1.414 1.414z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </span>
      <span
        aria-hidden={true}
        className="c7 c8"
      >
        Dolor
      </span>
    </span>
    <div
      className="c10"
    />
    <span
      className="c11 c4"
      title="Sit - active step"
    >
      <span
        aria-hidden={true}
        className="c5"
      >
        4
      </span>
      <span
        aria-hidden={true}
        className="c12 c8"
      >
        Sit
      </span>
    </span>
    <div
      className="c13"
    />
    <span
      className="c14 c4"
      title="Amet - step not done"
    >
      <span
        aria-hidden={true}
        className="c5"
      >
        5
      </span>
      <span
        aria-hidden={true}
        className="c7 c8"
      >
        Amet
      </span>
    </span>
    <div
      className="c13"
    />
    <span
      className="c14 c4"
      title="Ego - step not done"
    >
      <span
        aria-hidden={true}
        className="c5"
      >
        6
      </span>
      <span
        aria-hidden={true}
        className="c7 c8"
      >
        Ego
      </span>
    </span>
    <div
      className="c13"
    />
    <span
      className="c14 c4"
      title="Sum - step not done"
    >
      <span
        aria-hidden={true}
        className="c5"
      >
        7
      </span>
      <span
        aria-hidden={true}
        className="c7 c8"
      >
        Sum
      </span>
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules / ProgressBar Step Progression 1`] = `
.c0 {
  padding-left: 40px;
  padding-right: 40px;
  background-color: transparent;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 > *:not(:first-child) {
  padding-top: 8px;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c13 {
  color: #FFFFFF;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c11 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  background-color: #0046FF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 32px;
  width: 32px;
  border-radius: 32px;
}

.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  background-color: #BCBCB6;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 32px;
  width: 32px;
  border-radius: 32px;
}

.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  background-color: #00D200;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 32px;
  width: 32px;
  border-radius: 32px;
}

.c3 {
  width: 100%;
}

.c5 {
  position: relative;
}

.c8 {
  display: none;
  text-align: center;
  white-space: nowrap;
}

.c9 {
  width: 100%;
  height: 2px;
  background-color: #BCBCB6;
}

.c14 {
  width: 100%;
  height: 2px;
  background-color: #0046FF;
}

.c15 {
  width: 100%;
  height: 2px;
  background-color: #00D200;
}

@media (min-width:976px) {
  .c3 {
    padding-bottom: 32px;
  }
}

@media (min-width:976px) {
  .c8 {
    display: block;
    position: absolute;
    top: 40px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2 c3"
      hasLabels={true}
      title="progress bar"
    >
      <span
        className="c4 c5"
        title="One - active step"
      >
        <span
          aria-hidden={true}
          className="c6"
        >
          1
        </span>
        <span
          aria-hidden={true}
          className="c7 c8"
        >
          One
        </span>
      </span>
      <div
        className="c9"
      />
      <span
        className="c10 c5"
        title="Two - step not done"
      >
        <span
          aria-hidden={true}
          className="c6"
        >
          2
        </span>
        <span
          aria-hidden={true}
          className="c11 c8"
        >
          Two
        </span>
      </span>
      <div
        className="c9"
      />
      <span
        className="c10 c5"
        title="Three - step not done"
      >
        <span
          aria-hidden={true}
          className="c6"
        >
          3
        </span>
        <span
          aria-hidden={true}
          className="c11 c8"
        >
          Three
        </span>
      </span>
    </div>
    <div
      className="c2 c3"
      hasLabels={true}
      title="progress bar"
    >
      <span
        className="c12 c5"
        title="One - step done"
      >
        <span
          aria-hidden={true}
          className="c6"
        >
          <svg
            aria-hidden="true"
            className="c13"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={16}
          >
            <path
              clipRule="evenodd"
              d="M15.85 3.657l-9.9 9.9L.293 7.898l1.414-1.414 4.243 4.243 8.485-8.485 1.414 1.414z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
        <span
          aria-hidden={true}
          className="c11 c8"
        >
          One
        </span>
      </span>
      <div
        className="c14"
      />
      <span
        className="c4 c5"
        title="Two - active step"
      >
        <span
          aria-hidden={true}
          className="c6"
        >
          2
        </span>
        <span
          aria-hidden={true}
          className="c7 c8"
        >
          Two
        </span>
      </span>
      <div
        className="c9"
      />
      <span
        className="c10 c5"
        title="Three - step not done"
      >
        <span
          aria-hidden={true}
          className="c6"
        >
          3
        </span>
        <span
          aria-hidden={true}
          className="c11 c8"
        >
          Three
        </span>
      </span>
    </div>
    <div
      className="c2 c3"
      hasLabels={true}
      title="progress bar"
    >
      <span
        className="c12 c5"
        title="One - step done"
      >
        <span
          aria-hidden={true}
          className="c6"
        >
          <svg
            aria-hidden="true"
            className="c13"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={16}
          >
            <path
              clipRule="evenodd"
              d="M15.85 3.657l-9.9 9.9L.293 7.898l1.414-1.414 4.243 4.243 8.485-8.485 1.414 1.414z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
        <span
          aria-hidden={true}
          className="c11 c8"
        >
          One
        </span>
      </span>
      <div
        className="c15"
      />
      <span
        className="c12 c5"
        title="Two - step done"
      >
        <span
          aria-hidden={true}
          className="c6"
        >
          <svg
            aria-hidden="true"
            className="c13"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={16}
          >
            <path
              clipRule="evenodd"
              d="M15.85 3.657l-9.9 9.9L.293 7.898l1.414-1.414 4.243 4.243 8.485-8.485 1.414 1.414z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
        <span
          aria-hidden={true}
          className="c11 c8"
        >
          Two
        </span>
      </span>
      <div
        className="c14"
      />
      <span
        className="c4 c5"
        title="Three - active step"
      >
        <span
          aria-hidden={true}
          className="c6"
        >
          3
        </span>
        <span
          aria-hidden={true}
          className="c7 c8"
        >
          Three
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / ProgressBar Warning Step 1`] = `
.c0 {
  padding-left: 40px;
  padding-right: 40px;
  background-color: transparent;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 > *:not(:first-child) {
  padding-top: 8px;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  color: #FFFFFF;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c13 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  background-color: #00D200;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 32px;
  width: 32px;
  border-radius: 32px;
}

.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  background-color: #FFCF00;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 32px;
  width: 32px;
  border-radius: 32px;
}

.c15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  background-color: #BCBCB6;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 32px;
  width: 32px;
  border-radius: 32px;
}

.c3 {
  width: 100%;
}

.c5 {
  position: relative;
}

.c9 {
  display: none;
  text-align: center;
  white-space: nowrap;
}

.c10 {
  width: 100%;
  height: 2px;
  background-color: #00D200;
}

.c11 {
  width: 100%;
  height: 2px;
  background-color: #FFCF00;
}

.c14 {
  width: 100%;
  height: 2px;
  background-color: #BCBCB6;
}

@media (min-width:976px) {
  .c3 {
    padding-bottom: 32px;
  }
}

@media (min-width:976px) {
  .c9 {
    display: block;
    position: absolute;
    top: 40px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2 c3"
      hasLabels={true}
      title="progress bar"
    >
      <span
        className="c4 c5"
        title="One - step done"
      >
        <span
          aria-hidden={true}
          className="c6"
        >
          <svg
            aria-hidden="true"
            className="c7"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={16}
          >
            <path
              clipRule="evenodd"
              d="M15.85 3.657l-9.9 9.9L.293 7.898l1.414-1.414 4.243 4.243 8.485-8.485 1.414 1.414z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
        <span
          aria-hidden={true}
          className="c8 c9"
        >
          One
        </span>
      </span>
      <div
        className="c10"
      />
      <span
        className="c4 c5"
        title="Two - step done"
      >
        <span
          aria-hidden={true}
          className="c6"
        >
          <svg
            aria-hidden="true"
            className="c7"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={16}
          >
            <path
              clipRule="evenodd"
              d="M15.85 3.657l-9.9 9.9L.293 7.898l1.414-1.414 4.243 4.243 8.485-8.485 1.414 1.414z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
        <span
          aria-hidden={true}
          className="c8 c9"
        >
          Two
        </span>
      </span>
      <div
        className="c11"
      />
      <span
        className="c12 c5"
        title="Step with warning - active step"
      >
        <span
          aria-hidden={true}
          className="c6"
        >
          <svg
            aria-hidden="true"
            className="c7"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={16}
          >
            <path
              d="M8 10H10L10 5.5H8L8 10Z"
              fill="currentColor"
            />
            <path
              d="M8 12.5H10V10.75H8L8 12.5Z"
              fill="currentColor"
            />
            <path
              clipRule="evenodd"
              d="M11.0031 1.90646C10.1128 0.364514 7.88722 0.364512 6.99698 1.90646L1.31186 11.7534C0.421615 13.2953 1.53442 15.2228 3.31491 15.2228H14.6851C16.4656 15.2228 17.5784 13.2953 16.6882 11.7534L11.0031 1.90646ZM8.72903 2.90646C8.84947 2.69785 9.15058 2.69785 9.27102 2.90646L14.9561 12.7534C15.0766 12.962 14.926 13.2228 14.6851 13.2228H3.31491C3.07402 13.2228 2.92347 12.962 3.04391 12.7534L8.72903 2.90646Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
        <span
          aria-hidden={true}
          className="c13 c9"
        >
          Step with warning
        </span>
      </span>
      <div
        className="c14"
      />
      <span
        className="c15 c5"
        title="Four - warning step"
      >
        <span
          aria-hidden={true}
          className="c6"
        >
          4
        </span>
        <span
          aria-hidden={true}
          className="c8 c9"
        >
          Four
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / ProgressBar With Labels 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  color: #FFFFFF;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  background-color: #00D200;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 32px;
  width: 32px;
  border-radius: 32px;
}

.c9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  background-color: #0046FF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 32px;
  width: 32px;
  border-radius: 32px;
}

.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  background-color: #BCBCB6;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 32px;
  width: 32px;
  border-radius: 32px;
}

.c1 {
  width: 100%;
}

.c3 {
  position: relative;
}

.c7 {
  display: none;
  text-align: center;
  white-space: nowrap;
}

.c8 {
  width: 100%;
  height: 2px;
  background-color: #0046FF;
}

.c11 {
  width: 100%;
  height: 2px;
  background-color: #BCBCB6;
}

@media (min-width:976px) {
  .c1 {
    padding-bottom: 32px;
  }
}

@media (min-width:976px) {
  .c7 {
    display: block;
    position: absolute;
    top: 40px;
  }
}

<div
  className="c0 c1"
  hasLabels={true}
  title="progress bar"
>
  <span
    className="c2 c3"
    title="Lorem ipsum - step done"
  >
    <span
      aria-hidden={true}
      className="c4"
    >
      <svg
        aria-hidden="true"
        className="c5"
        focusable="false"
        height={16}
        preserveAspectRatio="xMidYMid meet"
        role="presentation"
        width={16}
      >
        <path
          clipRule="evenodd"
          d="M15.85 3.657l-9.9 9.9L.293 7.898l1.414-1.414 4.243 4.243 8.485-8.485 1.414 1.414z"
          fill="currentColor"
          fillRule="evenodd"
        />
      </svg>
    </span>
    <span
      aria-hidden={true}
      className="c6 c7"
    >
      Lorem ipsum
    </span>
  </span>
  <div
    className="c8"
  />
  <span
    className="c9 c3"
    title="Dolor sit amet - active step"
  >
    <span
      aria-hidden={true}
      className="c4"
    >
      2
    </span>
    <span
      aria-hidden={true}
      className="c10 c7"
    >
      Dolor sit amet
    </span>
  </span>
  <div
    className="c11"
  />
  <span
    className="c12 c3"
    title="Foo bar - step not done"
  >
    <span
      aria-hidden={true}
      className="c4"
    >
      3
    </span>
    <span
      aria-hidden={true}
      className="c6 c7"
    >
      Foo bar
    </span>
  </span>
</div>
`;
